fix header alignment

--- a/app/assets/stylesheets/components/_page-header.scss
+++ b/app/assets/stylesheets/components/_page-header.scss
@@ -12,4 +12,12 @@
     line-height: 20px;
     margin-top: 5px;
   }
+
+  .text-right {
+    text-align: left;
+
+    @media (min-width: $screen-sm-min) {
+      text-align: right;
+    }
+  }
 }
